--- a/src/components/eventCell/eventCell.css
+++ b/src/components/eventCell/eventCell.css
@@ -34,6 +34,7 @@
 }
 .timed-event {
   background-color: transparent;
+  background: none;
   border: none;
   width: fit-content;
 }
